[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/asset package custom/retro medieval 3d/Models/GLTF format/column.glb" type="PackedScene" id=1]
[ext_resource path="res://Assets/asset package custom/retro medieval 3d/Models/GLTF format/column_damaged.glb" type="PackedScene" id=2]
[ext_resource path="res://KinematicBody.gd" type="Script" id=3]
[ext_resource path="res://Assets/asset package custom/kenney impact sounds/impactMining_004.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/soundlib1/boxslap1.mp3" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.39443, 0.5014, 0.407824 )

[node name="DestructibleColumn" type="KinematicBody" groups=["Destructible"]]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.50044, 0 )
shape = SubResource( 1 )

[node name="column_damaged" parent="." instance=ExtResource( 2 )]
transform = Transform( 4, 0, 0, 0, -1, 3.49691e-07, 0, -8.74228e-08, -4, 0, 1, 0 )

[node name="column" parent="." instance=ExtResource( 1 )]
transform = Transform( 4, 0, 0, 0, -1, 3.49691e-07, 0, -8.74228e-08, -4, 0, 1, 0 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="StoneBreak" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.82

[node name="StoneDeath" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 8.1
max_db = 5.124
pitch_scale = 0.86

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
